--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "rss": "https://github.com/settermjd/indiba-currency-filter/releases.atom"
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.3",
     "zendframework/zend-inputfilter": "^2.10"
   },
   "require-dev": {
@@ -28,30 +28,22 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/INGDiBa/"
+      "INGDiBa\\": "src/INGDiBa/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "AppTest\\": "test/INGDiBa/"
+      "INGDiBaTest\\": "test/INGDiBa/"
     }
   },
   "scripts": {
-    "post-create-project-cmd": [
-      "@development-enable"
-    ],
-    "development-disable": "zf-development-mode disable",
-    "development-enable": "zf-development-mode enable",
-    "development-status": "zf-development-mode status",
-    "expressive": "expressive --ansi",
     "check": [
       "@cs-check",
       "@test"
     ],
-    "clear-config-cache": "php bin/clear-config-cache.php",
     "cs-check": "phpcs",
     "cs-fix": "phpcbf",
     "test": "phpunit --colors=always",
-    "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+    "test-coverage": "phpunit --colors=always --coverage-html build"
   }
 }
