Fix the package's namespace
It wasn't specific enough before. This change ensures that it is and
that it's consistent with my other packages.

--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,12 @@
   },
   "autoload": {
     "psr-4": {
-      "INGDiBa\\": "src/INGDiBa/"
+      "settermjd\\INGDiBa\\": "src/INGDiBa/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "INGDiBaTest\\": "test/INGDiBa/"
+      "settermjd\\INGDiBa\\Test\\": "test/INGDiBa/"
     }
   },
   "scripts": {
