--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0.1",
+    "phpstan/phpstan": "^0.9.2",
+    "phpstan/phpstan-strict-rules": "^0.9",
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "^2.9.1"
   },
@@ -43,6 +45,7 @@
     ],
     "cs-check": "phpcs",
     "cs-fix": "phpcbf",
+    "phpstan": "phpstan analyze -l max -c phpstan.neon ./src",
     "test": "phpunit --colors=always",
     "test-coverage": "phpunit --colors=always --coverage-html build"
   }
